--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/superslides.css">
   <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
 
@@ -80,6 +81,90 @@
     </div>
   </div>
 
+<div id="stats" class="statsSection section">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 col-sm-6">
+        <div class="squareItem">
+          <div class="squareInnerContainer">
+            <div class="squareIcon">
+              <i class="fa fa-clock"></i>
+            </div>
+            <div class="squareContent">
+              <h2 class="counter">124</h2>
+              <h3>Clients</h3>
+            </div>
+
+
+
+
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <div class="squareItem">
+          <div class="squareInnerContainer">
+            <div class="squareIcon">
+              <i class="fa fa-clock"></i>
+            </div>
+            <div class="squareContent">
+              <h2 class="counter">124</h2>
+              <h3>Clients</h3>
+            </div>
+
+
+
+
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <div class="squareItem">
+          <div class="squareInnerContainer">
+            <div class="squareIcon">
+              <i class="fa fa-clock"></i>
+            </div>
+            <div class="squareContent">
+              <h2 class="counter">123</h2>
+              <h3>Clients</h3>
+            </div>
+
+
+
+
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <div class="squareItem">
+          <div class="squareInnerContainer">
+            <div class="squareIcon">
+              <i class="fa fa-clock"></i>
+            </div>
+            <div class="squareContent">
+              <h2 class="counter">129</h2>
+              <h3>Clients</h3>
+            </div>
+
+
+
+
+
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="contact" class="contactSection section">
+  <div class="col-md-12 text-center">
+    <p class="subHeading">Like what you see?</p>
+    <h2>I'd love to hear from you!</h2>
+    <a href="mailto:matiullah.hasher@gmail.com" class="contactButton">GET IN TOUCH</a>
+  </div>
+</div>
 
 
 
@@ -89,6 +174,8 @@
 
 
   <script src="js/jquery.superslides.min.js"></script>
+  <script src="js/countUp.js"></script>
+  <script src="js/countUp-jquery.js"></script>
   <script src="js/jquery.easypiechart.min.js"></script>
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/typed.min.js"></script>
