--- a/index.html
+++ b/index.html
@@ -166,6 +166,29 @@
   </div>
 </div>
 
+<div id="portfolio" class="section">
+  <div class="container">
+    <div class="row">
+      <div class="heading">
+        <h2>PORTFOLIO</h2>
+    </div>
+    <div class="filter">
+      <ul id="filters">
+        <li><a href="#" data-filter="*" class="current">ALL</a></li>
+        <li><a href="#" data-filter=".apps">Apps</a></li>
+        <li><a href="#" data-filter=".me">Me</a></li>
+        <li><a href="#" data-filter=".websites">Websites</a></li>
+      </ul>
+
+  </div>
+  <div class="itemsContainer">
+    <ul class="items">
+      <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+        <div class="item">
+          <img src="">
+        </div>
+
+</div>
 
 
 
@@ -181,6 +204,7 @@
   <script src="js/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
   <script src="js/script.js"></script>
 
 </body>
