--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Matiullah Hasher</title>
 
@@ -8,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
 
@@ -40,6 +42,32 @@
     </div>
   </div>
 
+  <nav id="navigation" class="navbar navbar-expand-lg">
+  <a class="navbar-brand" href="#">Matiullah Hasher</a>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#skills">Skills <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#stats">Stats</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#portfolio">Portfolio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#contact">Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
   <div id "about" class="section">
     <div class="container">
       <div class="row">
@@ -71,141 +99,320 @@
           <div class="skill">
             <span class="chart" data-percent="67">
               <span class="percent">67</span>
-              <canvas height="152" width="152"></canvas>
+            <canvas height="152" width="152"></canvas>
             </span>
             <h4>Python</h4>
             <p>Used in the majority of my projects</p>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-<div id="stats" class="statsSection section">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3 col-sm-6">
-        <div class="squareItem">
-          <div class="squareInnerContainer">
-            <div class="squareIcon">
-              <i class="fa fa-clock"></i>
-            </div>
-            <div class="squareContent">
-              <h2 class="counter">124</h2>
-              <h3>Clients</h3>
+          <div class="owl-carousel owl-theme">
+            <div class="skill">
+              <span class="chart" data-percent="55">
+                <span class="percent">55</span>
+              <canvas height="152" width="152"></canvas>
+              </span>
+              <h4>MySQL</h4>
+              <p>Used in the majority of my projects</p>
             </div>
 
+            <div class="owl-carousel owl-theme">
+              <div class="skill">
+                <span class="chart" data-percent="98">
+                  <span class="percent">98</span>
+                <canvas height="152" width="152"></canvas>
+                </span>
+                <h4>Javascript</h4>
+                <p>Used in the majority of my projects</p>
+              </div>
 
-
-
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <div class="squareItem">
-          <div class="squareInnerContainer">
-            <div class="squareIcon">
-              <i class="fa fa-clock"></i>
-            </div>
-            <div class="squareContent">
-              <h2 class="counter">124</h2>
-              <h3>Clients</h3>
-            </div>
-
-
-
-
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <div class="squareItem">
-          <div class="squareInnerContainer">
-            <div class="squareIcon">
-              <i class="fa fa-clock"></i>
-            </div>
-            <div class="squareContent">
-              <h2 class="counter">123</h2>
-              <h3>Clients</h3>
-            </div>
-
-
-
-
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <div class="squareItem">
-          <div class="squareInnerContainer">
-            <div class="squareIcon">
-              <i class="fa fa-clock"></i>
-            </div>
-            <div class="squareContent">
-              <h2 class="counter">129</h2>
-              <h3>Clients</h3>
-            </div>
-
-
-
-
-
-
-          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-<div id="contact" class="contactSection section">
-  <div class="col-md-12 text-center">
-    <p class="subHeading">Like what you see?</p>
-    <h2>I'd love to hear from you!</h2>
-    <a href="mailto:matiullah.hasher@gmail.com" class="contactButton">GET IN TOUCH</a>
-  </div>
 </div>
 
-<div id="portfolio" class="section">
-  <div class="container">
-    <div class="row">
-      <div class="heading">
-        <h2>PORTFOLIO</h2>
-    </div>
-    <div class="filter">
-      <ul id="filters">
-        <li><a href="#" data-filter="*" class="current">ALL</a></li>
-        <li><a href="#" data-filter=".apps">Apps</a></li>
-        <li><a href="#" data-filter=".me">Me</a></li>
-        <li><a href="#" data-filter=".websites">Websites</a></li>
-      </ul>
-
-  </div>
-  <div class="itemsContainer">
-    <ul class="items">
-      <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-        <div class="item">
-          <img src="">
+  <div id="stats" class="statsSection section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+          <div class="squareItem">
+            <div class="squareInnerContainer">
+              <div class="squareIcon">
+                <i class="fa fa-clock"></i>
+              </div>
+              <div class="squareContent">
+                <h2 class="counter">124</h2>
+                <h3>Clients</h3>
+              </div>
+            </div>
+          </div>
         </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="squareItem">
+            <div class="squareInnerContainer">
+              <div class="squareIcon">
+                <i class="fa fa-clock"></i>
+              </div>
+              <div class="squareContent">
+                <h2 class="counter">124</h2>
+                <h3>Clients</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="squareItem">
+            <div class="squareInnerContainer">
+              <div class="squareIcon">
+                <i class="fa fa-clock"></i>
+              </div>
+              <div class="squareContent">
+                <h2 class="counter">123</h2>
+                <h3>Clients</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="squareItem">
+            <div class="squareInnerContainer">
+              <div class="squareIcon">
+                <i class="fa fa-clock"></i>
+              </div>
+              <div class="squareContent">
+                <h2 class="counter">129</h2>
+                <h3>Clients</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-</div>
+  <div id="contact" class="contactSection section">
+    <div class="col-md-12 text-center">
+      <p class="subHeading">Like what you see?</p>
+      <h2>I'd love to hear from you!</h2>
+      <a href="mailto:matiullah.hasher@gmail.com" class="contactButton">GET IN TOUCH</a>
+    </div>
+  </div>
+
+  <div id="portfolio" class="section">
+    <div class="container">
+      <div class="row">
+        <div class="heading">
+          <h2>PORTFOLIO</h2>
+        </div>
+        <div class="filter">
+          <ul id="filters">
+            <li><a href="#" data-filter="*" class="current">ALL</a></li>
+            <li><a href="#" data-filter=".apps">Apps</a></li>
+            <li><a href="#" data-filter=".me">Me</a></li>
+            <li><a href="#" data-filter=".websites">Websites</a></li>
+          </ul>
+        </div>
+        <div class="itemsContainer">
+          <ul class="items">
+            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/cat1cropped.jpeg">
+
+                <div class="icons">
+                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+            <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/cat1cropped.jpeg">
+
+                <div class="icons">
+                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+            <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/cat1cropped.jpeg">
+
+                <div class="icons">
+                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+            <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/cat1cropped.jpeg">
+
+                <div class="icons">
+                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+            <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/cat1cropped.jpeg">
+
+                <div class="icons">
+                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/cat1cropped.jpeg">
+
+                <div class="icons">
+                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+
+            <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/cat1cropped.jpeg">
+
+                <div class="icons">
+                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+
+            <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/cat1cropped.jpeg">
+
+                <div class="icons">
+                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+
+            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/cat1cropped.jpeg">
+
+                <div class="icons">
+                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="matiullah.com" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="copyrightSection">
+    <div class="col-md-12 text-center">
+      <p>&copy; Copyright Matiullah Hasher 2018</p>
+    </div>
+  </div>
 
 
 
 
 
 
+        <script src="js/jquery.superslides.min.js"></script>
+        <script src="js/countUp.js"></script>
+        <script src="js/countUp-jquery.js"></script>
+        <script src="js/jquery.easypiechart.min.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="js/typed.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
+        <script src="js/script.js"></script>
 
-  <script src="js/jquery.superslides.min.js"></script>
-  <script src="js/countUp.js"></script>
-  <script src="js/countUp-jquery.js"></script>
-  <script src="js/jquery.easypiechart.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/typed.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
-  <script src="js/script.js"></script>
+
+
+
+
 
 </body>
 
