more progress on index.html, script.js and style.css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 
 <body>
-
+  <div class="loader">
+    <div class="inner"></div>
+  </div>
 
   <div id="slides">
 
@@ -43,29 +45,29 @@
   </div>
 
   <nav id="navigation" class="navbar navbar-expand-lg">
-  <a class="navbar-brand" href="#">Matiullah Hasher</a>
+    <a class="navbar-brand" href="#">Matiullah Hasher</a>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#skills">Skills <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#stats">Stats</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#portfolio">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#skills">Skills <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#stats">Stats</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
 
   <div id "about" class="section">
@@ -105,31 +107,32 @@
             <p>Used in the majority of my projects</p>
           </div>
 
-          <div class="owl-carousel owl-theme">
-            <div class="skill">
-              <span class="chart" data-percent="55">
+
+
+        <div class="skill">
+          <span class="chart" data-percent="55">
                 <span class="percent">55</span>
-              <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>MySQL</h4>
-              <p>Used in the majority of my projects</p>
-            </div>
-
-            <div class="owl-carousel owl-theme">
-              <div class="skill">
-                <span class="chart" data-percent="98">
-                  <span class="percent">98</span>
-                <canvas height="152" width="152"></canvas>
-                </span>
-                <h4>Javascript</h4>
-                <p>Used in the majority of my projects</p>
-              </div>
-
+          <canvas height="152" width="152"></canvas>
+          </span>
+          <h4>MySQL</h4>
+          <p>Used in the majority of my projects</p>
         </div>
+
+
+
+        <div class="skill">
+          <span class="chart" data-percent="98">
+                  <span class="percent">98</span>
+          <canvas height="152" width="152"></canvas>
+          </span>
+          <h4>Javascript</h4>
+          <p>Used in the majority of my projects</p>
+        </div>
+
+
       </div>
     </div>
   </div>
-</div>
 </div>
 
   <div id="stats" class="statsSection section">
@@ -217,86 +220,14 @@
           <ul class="items">
             <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
               <div class="item">
-                <img src="img/cat1cropped.jpeg">
+                <img src="img/nbaimg-thumbnail.PNG">
 
                 <div class="icons">
-                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
+                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
 
                   <i class="fa fa-search"></i>
                 </a>
-                  <a href="" target="_blank" class="projectLink">
-                  <i class="fa fa-link"></i>
-                </a>
-                </div>
-
-                <div class="imageOverlay"></div>
-
-              </div>
-            </li>
-            <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
-              <div class="item">
-                <img src="img/cat1cropped.jpeg">
-
-                <div class="icons">
-                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
-
-                  <i class="fa fa-search"></i>
-                </a>
-                  <a href="" target="_blank" class="projectLink">
-                  <i class="fa fa-link"></i>
-                </a>
-                </div>
-
-                <div class="imageOverlay"></div>
-
-              </div>
-            </li>
-            <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
-              <div class="item">
-                <img src="img/cat1cropped.jpeg">
-
-                <div class="icons">
-                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
-
-                  <i class="fa fa-search"></i>
-                </a>
-                  <a href="" target="_blank" class="projectLink">
-                  <i class="fa fa-link"></i>
-                </a>
-                </div>
-
-                <div class="imageOverlay"></div>
-
-              </div>
-            </li>
-            <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
-              <div class="item">
-                <img src="img/cat1cropped.jpeg">
-
-                <div class="icons">
-                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
-
-                  <i class="fa fa-search"></i>
-                </a>
-                  <a href="" target="_blank" class="projectLink">
-                  <i class="fa fa-link"></i>
-                </a>
-                </div>
-
-                <div class="imageOverlay"></div>
-
-              </div>
-            </li>
-            <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
-              <div class="item">
-                <img src="img/cat1cropped.jpeg">
-
-                <div class="icons">
-                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
-
-                  <i class="fa fa-search"></i>
-                </a>
-                  <a href="" target="_blank" class="projectLink">
+                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
                   <i class="fa fa-link"></i>
                 </a>
                 </div>
@@ -307,14 +238,14 @@
             </li>
             <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
               <div class="item">
-                <img src="img/cat1cropped.jpeg">
+                <img src="img/nbaimg-thumbnail.PNG">
 
                 <div class="icons">
-                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
+                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
 
                   <i class="fa fa-search"></i>
                 </a>
-                  <a href="" target="_blank" class="projectLink">
+                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
                   <i class="fa fa-link"></i>
                 </a>
                 </div>
@@ -323,55 +254,16 @@
 
               </div>
             </li>
-
-            <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
-              <div class="item">
-                <img src="img/cat1cropped.jpeg">
-
-                <div class="icons">
-                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
-
-                  <i class="fa fa-search"></i>
-                </a>
-                  <a href="" target="_blank" class="projectLink">
-                  <i class="fa fa-link"></i>
-                </a>
-                </div>
-
-                <div class="imageOverlay"></div>
-
-              </div>
-            </li>
-
-            <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
-              <div class="item">
-                <img src="img/cat1cropped.jpeg">
-
-                <div class="icons">
-                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
-
-                  <i class="fa fa-search"></i>
-                </a>
-                  <a href="" target="_blank" class="projectLink">
-                  <i class="fa fa-link"></i>
-                </a>
-                </div>
-
-                <div class="imageOverlay"></div>
-
-              </div>
-            </li>
-
             <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
               <div class="item">
-                <img src="img/cat1cropped.jpeg">
+                <img src="img/nbaimg-thumbnail.PNG">
 
                 <div class="icons">
-                  <a href="img/cat1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="This is a cute cat!">
+                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
 
                   <i class="fa fa-search"></i>
                 </a>
-                  <a href="matiullah.com" target="_blank" class="projectLink">
+                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
                   <i class="fa fa-link"></i>
                 </a>
                 </div>
@@ -380,6 +272,97 @@
 
               </div>
             </li>
+            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/nbaimg-thumbnail.PNG">
+
+                <div class="icons">
+                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/nbaimg-thumbnail.PNG">
+
+                <div class="icons">
+                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/nbaimg-thumbnail.PNG">
+
+                <div class="icons">
+                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/nbaimg-thumbnail.PNG">
+
+                <div class="icons">
+                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/nbaimg-thumbnail.PNG">
+
+                <div class="icons">
+                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+
           </ul>
         </div>
       </div>
@@ -397,17 +380,17 @@
 
 
 
-        <script src="js/jquery.superslides.min.js"></script>
-        <script src="js/countUp.js"></script>
-        <script src="js/countUp-jquery.js"></script>
-        <script src="js/jquery.easypiechart.min.js"></script>
-        <script src="js/owl.carousel.min.js"></script>
-        <script src="js/typed.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
-        <script src="js/script.js"></script>
+  <script src="js/jquery.superslides.min.js"></script>
+  <script src="js/countUp.js"></script>
+  <script src="js/countUp-jquery.js"></script>
+  <script src="js/jquery.easypiechart.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/typed.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
+  <script src="js/script.js"></script>
 
 
 
