updated social media links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Matiullah Hasher</title>
 
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/superslides.css">
   <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
@@ -109,31 +109,31 @@
 
 
 
-        <div class="skill">
-          <span class="chart" data-percent="55">
+          <div class="skill">
+            <span class="chart" data-percent="55">
                 <span class="percent">55</span>
-          <canvas height="152" width="152"></canvas>
-          </span>
-          <h4>MySQL</h4>
-          <p>Used in the majority of my projects</p>
-        </div>
+            <canvas height="152" width="152"></canvas>
+            </span>
+            <h4>MySQL</h4>
+            <p>Used in the majority of my projects</p>
+          </div>
 
 
 
-        <div class="skill">
-          <span class="chart" data-percent="98">
+          <div class="skill">
+            <span class="chart" data-percent="98">
                   <span class="percent">98</span>
-          <canvas height="152" width="152"></canvas>
-          </span>
-          <h4>Javascript</h4>
-          <p>Used in the majority of my projects</p>
+            <canvas height="152" width="152"></canvas>
+            </span>
+            <h4>Javascript</h4>
+            <p>Used in the majority of my projects</p>
+          </div>
+
+
         </div>
-
-
       </div>
     </div>
   </div>
-</div>
 
   <div id="stats" class="statsSection section">
     <div class="container">
@@ -194,13 +194,7 @@
     </div>
   </div>
 
-  <div id="contact" class="contactSection section">
-    <div class="col-md-12 text-center">
-      <p class="subHeading">Like what you see?</p>
-      <h2>I'd love to hear from you!</h2>
-      <a href="mailto:matiullah.hasher@gmail.com" class="contactButton">GET IN TOUCH</a>
-    </div>
-  </div>
+
 
   <div id="portfolio" class="section">
     <div class="container">
@@ -236,7 +230,25 @@
 
               </div>
             </li>
-            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+            <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/nbaimg-thumbnail.PNG">
+
+                <div class="icons">
+                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+            <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
               <div class="item">
                 <img src="img/nbaimg-thumbnail.PNG">
 
@@ -272,7 +284,7 @@
 
               </div>
             </li>
-            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+            <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
               <div class="item">
                 <img src="img/nbaimg-thumbnail.PNG">
 
@@ -290,7 +302,7 @@
 
               </div>
             </li>
-            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+            <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
               <div class="item">
                 <img src="img/nbaimg-thumbnail.PNG">
 
@@ -308,25 +320,7 @@
 
               </div>
             </li>
-            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-              <div class="item">
-                <img src="img/nbaimg-thumbnail.PNG">
-
-                <div class="icons">
-                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
-
-                  <i class="fa fa-search"></i>
-                </a>
-                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
-                  <i class="fa fa-link"></i>
-                </a>
-                </div>
-
-                <div class="imageOverlay"></div>
-
-              </div>
-            </li>
-            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+            <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
               <div class="item">
                 <img src="img/nbaimg-thumbnail.PNG">
 
@@ -369,28 +363,49 @@
     </div>
   </div>
 
-  <div class="copyrightSection">
-    <div class="col-md-12 text-center">
-      <p>&copy; Copyright Matiullah Hasher 2018</p>
+  <div id="contact" class="contactSection section">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <p class="subHeading">Like what you see?</p>
+          <h2>I'd love to hear from you!</h2>
+          <ul class="socialMedia">
+            <li><a href="https://github.com/matiullah23" target="_blank"><i class="fab fa-github-square"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/matiullah-hasher/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="mailTo:matiullah.hasher@gmail.com"><i class="fas fa-envelope-square"></i> </a></li>
+          </ul>
+        </div>
+      </div>
+
+
     </div>
   </div>
 
 
 
+    <div class="copyrightSection">
+      <div class="col-md-12 text-center">
+        <p>&copy; Copyright Matiullah Hasher 2018</p>
+      </div>
+    </div>
 
 
 
-  <script src="js/jquery.superslides.min.js"></script>
-  <script src="js/countUp.js"></script>
-  <script src="js/countUp-jquery.js"></script>
-  <script src="js/jquery.easypiechart.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/typed.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
-  <script src="js/script.js"></script>
+
+
+
+    <script src="js/jquery.superslides.min.js"></script>
+    <script src="js/countUp.js"></script>
+    <script src="js/countUp-jquery.js"></script>
+    <script src="js/jquery.easypiechart.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
+    <script src="js/script.js"></script>
 
 
 
