--- a/index.html
+++ b/index.html
@@ -99,34 +99,52 @@
 
         <div class="owl-carousel owl-theme">
           <div class="skill">
-            <span class="chart" data-percent="67">
-              <span class="percent">67</span>
+            <span class="chart" data-percent="80">
+              <span class="percent">80</span>
             <canvas height="152" width="152"></canvas>
             </span>
             <h4>Python</h4>
-            <p>Used in the majority of my projects</p>
+
           </div>
 
 
 
           <div class="skill">
-            <span class="chart" data-percent="55">
-                <span class="percent">55</span>
+            <span class="chart" data-percent="75">
+                <span class="percent">75</span>
+            <canvas height="152" width="152"></canvas>
+            </span>
+            <h4>JavaScript</h4>
+
+          </div>
+
+
+
+          <div class="skill">
+            <span class="chart" data-percent="75">
+                  <span class="percent">75</span>
             <canvas height="152" width="152"></canvas>
             </span>
             <h4>MySQL</h4>
-            <p>Used in the majority of my projects</p>
+
           </div>
 
-
-
           <div class="skill">
-            <span class="chart" data-percent="98">
-                  <span class="percent">98</span>
+            <span class="chart" data-percent="75">
+              <span class="percent">75</span>
             <canvas height="152" width="152"></canvas>
             </span>
-            <h4>Javascript</h4>
-            <p>Used in the majority of my projects</p>
+            <h4>HTML/CSS</h4>
+
+          </div>
+
+          <div class="skill">
+            <span class="chart" data-percent="80">
+              <span class="percent">80</span>
+            <canvas height="152" width="152"></canvas>
+            </span>
+            <h4>Tableau</h4>
+
           </div>
 
 
@@ -207,7 +225,6 @@
             <li><a href="#" data-filter="*" class="current">ALL</a></li>
             <li><a href="#" data-filter=".apps">Apps</a></li>
             <li><a href="#" data-filter=".me">Me</a></li>
-            <li><a href="#" data-filter=".websites">Websites</a></li>
           </ul>
         </div>
         <div class="itemsContainer">
@@ -230,16 +247,16 @@
 
               </div>
             </li>
-            <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
+            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
               <div class="item">
-                <img src="img/nbaimg-thumbnail.PNG">
+                <img src="img/belly_img_cropped.png">
 
                 <div class="icons">
-                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
+                  <a href="img/belly_img.png" title="View Visualization" class="openButton" data-fancybox data-caption="">
 
                   <i class="fa fa-search"></i>
                 </a>
-                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
+                  <a href="https://github.com/matiullah23/belly-button-biodiversity" target="_blank" class="projectLink">
                   <i class="fa fa-link"></i>
                 </a>
                 </div>
@@ -248,16 +265,17 @@
 
               </div>
             </li>
-            <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
               <div class="item">
-                <img src="img/nbaimg-thumbnail.PNG">
+                <img src="img/mars_img_cropped.png">
 
                 <div class="icons">
-                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
+                  <a href="img/mars_img.png" title="View Visualization" class="openButton" data-fancybox data-caption="">
 
                   <i class="fa fa-search"></i>
                 </a>
-                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
+                  <a href="https://github.com/matiullah23/mission_to_mars" target="_blank" class="projectLink">
                   <i class="fa fa-link"></i>
                 </a>
                 </div>
@@ -268,68 +286,14 @@
             </li>
             <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
               <div class="item">
-                <img src="img/nbaimg-thumbnail.PNG">
+                <img src="img/newsroom_img_cropped.png">
 
                 <div class="icons">
-                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
+                  <a href="img/newsroom_img.png" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
 
                   <i class="fa fa-search"></i>
                 </a>
-                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
-                  <i class="fa fa-link"></i>
-                </a>
-                </div>
-
-                <div class="imageOverlay"></div>
-
-              </div>
-            </li>
-            <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
-              <div class="item">
-                <img src="img/nbaimg-thumbnail.PNG">
-
-                <div class="icons">
-                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
-
-                  <i class="fa fa-search"></i>
-                </a>
-                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
-                  <i class="fa fa-link"></i>
-                </a>
-                </div>
-
-                <div class="imageOverlay"></div>
-
-              </div>
-            </li>
-            <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
-              <div class="item">
-                <img src="img/nbaimg-thumbnail.PNG">
-
-                <div class="icons">
-                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
-
-                  <i class="fa fa-search"></i>
-                </a>
-                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
-                  <i class="fa fa-link"></i>
-                </a>
-                </div>
-
-                <div class="imageOverlay"></div>
-
-              </div>
-            </li>
-            <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
-              <div class="item">
-                <img src="img/nbaimg-thumbnail.PNG">
-
-                <div class="icons">
-                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
-
-                  <i class="fa fa-search"></i>
-                </a>
-                  <a href="https://github.com/matiullah23/nba-attendance" target="_blank" class="projectLink">
+                  <a href="https://github.com/matiullah23/newsroom" target="_blank" class="projectLink">
                   <i class="fa fa-link"></i>
                 </a>
                 </div>
@@ -340,10 +304,64 @@
             </li>
             <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
               <div class="item">
-                <img src="img/nbaimg-thumbnail.PNG">
+                <img src="img/sheeple_img_cropped.png">
 
                 <div class="icons">
-                  <a href="img/nbaimg.PNG" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
+                  <a href="img/sheeple_img.png" title="View Visualization" class="openButton" data-fancybox data-caption="">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="https://github.com/matiullah23/ufo-sightings" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/twitter_img_cropped.png">
+
+                <div class="icons">
+                  <a href="img/twitter_img.png" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="https://github.com/matiullah23/SocialAnalytics" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+            <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/matplot_img_cropped.png">
+
+                <div class="icons">
+                  <a href="img/matplot_img.png" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
+
+                  <i class="fa fa-search"></i>
+                </a>
+                  <a href="https://github.com/matiullah23/Matplotlib-Pyber" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+                </div>
+
+                <div class="imageOverlay"></div>
+
+              </div>
+            </li>
+            <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <div class="item">
+                <img src="img/pres_1_cropped.jpg">
+
+                <div class="icons">
+                  <a href="img/pres_1.jpg" title="View Visualization" class="openButton" data-fancybox data-caption="Scatter Bubble Chart">
 
                   <i class="fa fa-search"></i>
                 </a>
@@ -356,7 +374,6 @@
 
               </div>
             </li>
-
           </ul>
         </div>
       </div>
@@ -369,7 +386,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <p class="subHeading">Like what you see?</p>
-          <h2>I'd love to hear from you!</h2>
+          <h2>Let's Get in Touch!</h2>
           <ul class="socialMedia">
             <li><a href="https://github.com/matiullah23" target="_blank"><i class="fab fa-github-square"></i></a></li>
             <li><a href="https://www.linkedin.com/in/matiullah-hasher/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
@@ -384,28 +401,28 @@
 
 
 
-    <div class="copyrightSection">
-      <div class="col-md-12 text-center">
-        <p>&copy; Copyright Matiullah Hasher 2018</p>
-      </div>
+  <div class="copyrightSection">
+    <div class="col-md-12 text-center">
+      <p>&copy; Copyright Matiullah Hasher 2018</p>
     </div>
+  </div>
 
 
 
 
 
 
-    <script src="js/jquery.superslides.min.js"></script>
-    <script src="js/countUp.js"></script>
-    <script src="js/countUp-jquery.js"></script>
-    <script src="js/jquery.easypiechart.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/typed.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
-    <script src="js/script.js"></script>
+  <script src="js/jquery.superslides.min.js"></script>
+  <script src="js/countUp.js"></script>
+  <script src="js/countUp-jquery.js"></script>
+  <script src="js/jquery.easypiechart.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/typed.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
+  <script src="js/script.js"></script>
 
 
 
