--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <div class="slides-container">
       <img src="img/slide1.jpg" alt="">
-      <img src="img/slide2.jpg" alt="">
       <img src="img/slide3.jpg" alt="">
+      <img src="img/slide4.jpg" alt="">
     </div>
 
     <div class="titleMessage">
@@ -80,8 +80,8 @@
 
         <div class="col-md-7">
           <h4>My name is Matiullah Hasher</h4>
-          <p>Data analyst with sights set on obtaining a software development position with skills acquired professionally and in the classroom. Acquired a B.S in Finance along with a background in financial services in the mortgage industry. Experienced
-            in Excel, VBA, Python and SQL.</p>
+          <p>Data analyst with skills acquired professionally (E-Commerce analytics) and in the classroom at George Washington University's Data Analytics Bootcamp. Acquired a B.S in Finance along with a background in financial services in the mortgage industry. Experienced
+            in Python, Javascript, SQL, and Excel.</p>
           <p>Professional highlights include recognition for sales excellence and implementing new technologies to make practices more efficient and increase sales revenue.</p>
         </div>
 
@@ -94,7 +94,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <h2>TECHNICAL SKILLS</h2>
-          <p>A Representation of my Proficiency in Each Skill</p>
+          <p>A Representation of my Proficiency/Comfort in Each Skill</p>
         </div>
 
         <div class="owl-carousel owl-theme">
@@ -163,8 +163,8 @@
                 <i class="fa fa-clock"></i>
               </div>
               <div class="squareContent">
-                <h2 class="counter">124</h2>
-                <h3>Clients</h3>
+                <h2 class="counter">6</h2>
+                <h3>Years Exp.- Excel</h3>
               </div>
             </div>
           </div>
@@ -176,8 +176,8 @@
                 <i class="fa fa-clock"></i>
               </div>
               <div class="squareContent">
-                <h2 class="counter">124</h2>
-                <h3>Clients</h3>
+                <h2 class="counter">4</h2>
+                <h3>Years Exp.- Financial Services</h3>
               </div>
             </div>
           </div>
@@ -189,8 +189,8 @@
                 <i class="fa fa-clock"></i>
               </div>
               <div class="squareContent">
-                <h2 class="counter">123</h2>
-                <h3>Clients</h3>
+                <h2 class="counter">1</h2>
+                <h3>Years Exp.- Programming</h3>
               </div>
             </div>
           </div>
@@ -202,8 +202,8 @@
                 <i class="fa fa-clock"></i>
               </div>
               <div class="squareContent">
-                <h2 class="counter">129</h2>
-                <h3>Clients</h3>
+                <h2 class="counter">1</h2>
+                <h3>Years Exp.- Data Analysis</h3>
               </div>
             </div>
           </div>
